Add facet for date created (#1354)
* Add facet for date created, add dateCreatedYear